# mlsys-self-study

./: README.md
flash-attention-triton/: README.md
flash-attention-triton/triton/: flash_attention.py
kaleidoscope-llvm/: CMakeLists.txt  LICENSE  README.md
kaleidoscope-llvm/notes/: chapter1.md  chapter2.md  chapter3.md  chapter4.md
kaleidoscope-llvm/src/: llvm_codegen.cpp  llvm_if_for.cpp  llvm_opt_jit.cpp  no_llvm.cpp
tutorial-mlir/: BUILD  README.md  extensions.bzl
tutorial-mlir/bazel/: lit.bzl
tutorial-mlir/lib/Dialect/Poly/: BUILD  PolyDialect.cpp  PolyDialect.h  PolyDialect.td  PolyOps.cpp  PolyOps.h  PolyOps.td  PolyTraits.h  PolyTypes.h  PolyTypes.td
tutorial-mlir/lib/Transform/Affine/: AffineFullUnroll.cpp  AffineFullUnroll.h  AffineFullUnrollPatternRewrite.cpp  AffineFullUnrollPatternRewrite.h  BUILD  Passes.td
tutorial-mlir/lib/Transform/Arith/: BUILD  MulToAdd.cpp  MulToAdd.h
tutorial-mlir/tests/: BUILD  ctlr-runner.mlir  lit.cfg.py  poly_syntax.mlir  unrolling_fail.mlir
tutorial-mlir/tools/: BUILD  tutorial-opt.cpp
